@@ -1,3 +1,10 @@
+2023-04-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[ms]: Regression-test Savannah #64005.
+
+	* tmac/tests/s_honor-page-break-after-display.sh: Do it.
+	* tmac/tmac.am (tmac_TESTS): Run test.
+
 2023-03-24  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* tmac/mdoc/doc-common (Sh): Restore hyphenation configured with
